@@ -1,5 +1,10 @@
 2007-07-01  Vincent Untz  <vuntz@gnome.org>
 
+	* panel-toplevel.c: add two comments to help with understanding the
+	code.
+
+2007-07-01  Vincent Untz  <vuntz@gnome.org>
+
 	Migrate to GtkTooltip.
 
 	* panel-util.[ch]: (panel_util_query_tooltip_cb): new, check if
